number of submissions attempts were not getting checked,

--- a/war/WEB-INF/classes/messages.properties
+++ b/war/WEB-INF/classes/messages.properties
@@ -23,3 +23,4 @@ DoesntRun.playerCode.file= could not complete 10 games in 1 second.
 Submission.AfterClosingDate=You cannot submit after the due date.
 Submission.NoFile=You need to submit a file.
 Submission.NotZip=You need to submit a <b>zip</b> archive.
+Submission.NoAttempts=You have run out of attempts.
