--- a/war/WEB-INF/classes/messages.properties
+++ b/war/WEB-INF/classes/messages.properties
@@ -24,3 +24,6 @@ Submission.AfterClosingDate=You cannot submit after the due date.
 Submission.NoFile=You need to submit a file.
 Submission.NotZip=You need to submit a <b>zip</b> archive.
 Submission.NoAttempts=You have run out of attempts.
+
+# player validation
+Player.noFile="You did not submit a file"
