* Added AntJob, which is used to simplify running of ant tasks.  * Added Runners, which are classes designed to generate an ant build file, then run the file and monitor the results.   * Added a JUnit test runner   * Added an Arena Competion runner   * Added a generic script runner

--- a/war/WEB-INF/classes/messages.properties
+++ b/war/WEB-INF/classes/messages.properties
@@ -26,4 +26,5 @@ Submission.NotZip=You need to submit a <b>zip</b> archive.
 Submission.NoAttempts=You have run out of attempts.
 
 # player validation
-Player.noFile="You did not submit a file"
+Player.noFile=You did not submit a file
+Competition.doesNotExist=Competition not found.
