Added validation for new assessment form

--- a/war/WEB-INF/classes/messages.properties
+++ b/war/WEB-INF/classes/messages.properties
@@ -3,6 +3,13 @@ UOS=Info1103
 # General errors
 errors.message=There were some errors in the form. Please correct the errors before continuing.
 
+# New Assessment
+NotEmpty.newAssessmentForm.name=Assessment must have a name.
+Length.newAssessmentForm.name=Assessment name must be less than {1} characters.
+Min.newAssessmentForm.marks=Marks must not be negative.
+NotNull.newAssessmentForm.dueDate=Assessment must have a due date.
+Min.newAssessmentForm.maxSubmissions=Max submissions must not be negative.
+
 # loginForm
 NotEmpty.loginForm.unikey=You must enter a UniKey.
 NotEmpty.loginForm.password=You must enter a Password.
