Added validation for unit test updates.

--- a/war/WEB-INF/classes/messages.properties
+++ b/war/WEB-INF/classes/messages.properties
@@ -10,6 +10,14 @@ Min.newAssessmentForm.marks=Marks must not be negative.
 NotNull.newAssessmentForm.dueDate=Assessment must have a due date.
 Min.newAssessmentForm.maxSubmissions=Max submissions must not be negative.
 
+# Update Unit Test
+NotEmpty.updateUnitTest.name=Unit test name must not be empty.
+Length.updateUnitTest.name=Unit test name must be less than {1} characters.
+NotUnique.updateUnitTest.testCases=Unit test names must be unique. Duplicate name [{0}] found.
+NotEmpty.updateUnitTest.testCases.testName=Please enter a name for the test case.
+NotValid.updateUnitTest.testCases.testName=Test case name must be a valid Java method identifier (alphanumeric with underscores; no whitespace).
+Min.updateUnitTest.testCases.timeout=Cannot have a negative test timeout.
+
 # loginForm
 NotEmpty.loginForm.unikey=You must enter a UniKey.
 NotEmpty.loginForm.password=You must enter a Password.
