Added validation for New Competition form

--- a/war/WEB-INF/classes/messages.properties
+++ b/war/WEB-INF/classes/messages.properties
@@ -18,6 +18,11 @@ NotEmpty.updateUnitTest.testCases.testName=Please enter a name for the test case
 NotValid.updateUnitTest.testCases.testName=Test case name must be a valid Java method identifier (alphanumeric with underscores; no whitespace).
 Min.updateUnitTest.testCases.timeout=Cannot have a negative test timeout.
 
+# New Competition
+NotEmpty.newCompetitionModel.name=Competition must have a name.
+Length.newCompetitionModel.name=Competition name must be less than {1} characters.
+NotEmpty.newCompetitionModel.type=Please select a type.
+
 # loginForm
 NotEmpty.loginForm.unikey=You must enter a UniKey.
 NotEmpty.loginForm.password=You must enter a Password.
