Added validation for new hand marking template form

--- a/war/WEB-INF/classes/messages.properties
+++ b/war/WEB-INF/classes/messages.properties
@@ -23,6 +23,10 @@ NotEmpty.newCompetitionModel.name=Competition must have a name.
 Length.newCompetitionModel.name=Competition name must be less than {1} characters.
 NotEmpty.newCompetitionModel.type=Please select a type.
 
+# New Hand Marking
+NotEmpty.newHandMarkingModel.name=Hand marking template must have a name.
+Length.newHandMarkingModel.name=Hand marking template name must be less than {1} characters.
+
 # loginForm
 NotEmpty.loginForm.unikey=You must enter a UniKey.
 NotEmpty.loginForm.password=You must enter a Password.
