Added validation for new unit test form.

--- a/war/WEB-INF/classes/messages.properties
+++ b/war/WEB-INF/classes/messages.properties
@@ -27,6 +27,11 @@ NotEmpty.newCompetitionModel.type=Please select a type.
 NotEmpty.newHandMarkingModel.name=Hand marking template must have a name.
 Length.newHandMarkingModel.name=Hand marking template name must be less than {1} characters.
 
+# New Unit Test
+NotEmpty.newUnitTest.name=Unit test must have a name.
+Length.newUnitTest.name=Unit test name must be less than {1} characters.
+NotNull.newUnitTest.type=Please select a unit test type.
+
 # loginForm
 NotEmpty.loginForm.unikey=You must enter a UniKey.
 NotEmpty.loginForm.password=You must enter a Password.
