* Added validation for testing a unit test.  * Corrected method for performing custom validation (inject validator beans and then manually call custom validation). This allows multiple different validators for one controller.

--- a/war/WEB-INF/classes/messages.properties
+++ b/war/WEB-INF/classes/messages.properties
@@ -32,6 +32,10 @@ NotEmpty.newUnitTest.name=Unit test must have a name.
 Length.newUnitTest.name=Unit test name must be less than {1} characters.
 NotNull.newUnitTest.type=Please select a unit test type.
 
+# Test Unit Test
+Length.testUnitTest.solutionName=Expected solution name must be less than {1} characters.
+NotEmpty.testUnitTest.file=Please select a file to upload.
+
 # loginForm
 NotEmpty.loginForm.unikey=You must enter a UniKey.
 NotEmpty.loginForm.password=You must enter a Password.
