Added form validation for updating an assessment.

--- a/war/WEB-INF/classes/messages.properties
+++ b/war/WEB-INF/classes/messages.properties
@@ -10,6 +10,27 @@ Min.newAssessmentForm.marks=Marks must not be negative.
 NotNull.newAssessmentForm.dueDate=Assessment must have a due date.
 Min.newAssessmentForm.maxSubmissions=Max submissions must not be negative.
 
+# Update Assessment
+Min.updateAssessmentForm.id=Invalid assessment.
+NotEmpty.updateAssessmentForm.name=Assessment name may not be empty.
+Length.updateAssessmentForm.name=Assessment name must be less than {1} characters.
+Length.updateAssessmentForm.category=Assessment category must be less than {1} characters.
+Min.updateAssessmentForm.marks=Assessment cannot be worth negative marks.
+NotNull.updateAssessmentForm.dueDate=Please enter a due date.
+Min.updateAssessmentForm.numSubmissionsAllowed=Please enter a non-negative number.
+Length.updateAssessmentForm.description=Assessment description too long. Must be less than {1} characters.
+Length.updateAssessmentForm.solutionName=Expected solution name must be less than {1} characters.
+
+NotFound.updateAssessmentForm=Assessment not found.
+BlackBox.NotEmpty.updateAssessmentForm.solutionName=As you are using Black Box unit tests, your assessment requires a solution name.
+BlackBox.Empty.updateAssessmentForm.solutionName=As you are not using Black Box unit tests, your assessment does not require a solution name. Please clear this field.
+BlackBox.Empty.updateAssessmentForm.languages=As you are not using Black Box unit tests, your assessment does not have a choice of languages. Please clear this field.
+NotNegative.updateAssessmentForm.newUnitTests.weight=Cannot have a negative weight.
+NotNegative.updateAssessmentForm.newSecretUnitTests.weight=Cannot have a negative weight.
+NotNegative.updateAssessmentForm.newHandmarking.weight=Cannot have a negative weight.
+NotNegative.updateAssessmentForm.newCompetitions.weight=Cannot have a negative weight.
+
+
 # Update Unit Test
 NotEmpty.updateUnitTest.name=Unit test name must not be empty.
 Length.updateUnitTest.name=Unit test name must be less than {1} characters.
