* Fixed unnecessary error output when leaving a competition run date blank.  * Added validation for update competion forms.

--- a/war/WEB-INF/classes/messages.properties
+++ b/war/WEB-INF/classes/messages.properties
@@ -30,6 +30,10 @@ NotNegative.updateAssessmentForm.newSecretUnitTests.weight=Cannot have a negativ
 NotNegative.updateAssessmentForm.newHandmarking.weight=Cannot have a negative weight.
 NotNegative.updateAssessmentForm.newCompetitions.weight=Cannot have a negative weight.
 
+# New Unit Test
+NotEmpty.newUnitTest.name=Unit test must have a name.
+Length.newUnitTest.name=Unit test name must be less than {1} characters.
+NotNull.newUnitTest.type=Please select a unit test type.
 
 # Update Unit Test
 NotEmpty.updateUnitTest.name=Unit test name must not be empty.
@@ -39,19 +43,26 @@ NotEmpty.updateUnitTest.testCases.testName=Please enter a name for the test case
 NotValid.updateUnitTest.testCases.testName=Test case name must be a valid Java method identifier (alphanumeric with underscores; no whitespace).
 Min.updateUnitTest.testCases.timeout=Cannot have a negative test timeout.
 
+# New Hand Marking
+NotEmpty.newHandMarkingModel.name=Hand marking template must have a name.
+Length.newHandMarkingModel.name=Hand marking template name must be less than {1} characters.
+
 # New Competition
 NotEmpty.newCompetitionModel.name=Competition must have a name.
 Length.newCompetitionModel.name=Competition name must be less than {1} characters.
 NotEmpty.newCompetitionModel.type=Please select a type.
 
-# New Hand Marking
-NotEmpty.newHandMarkingModel.name=Hand marking template must have a name.
-Length.newHandMarkingModel.name=Hand marking template name must be less than {1} characters.
+# Update Competition
+Min.updateCompetitionForm.id=Invalid competition ID.
+NotEmpty.updateCompetitionForm.name=Competition name must not be empty.
+Length.updateCompetitionForm.name=Competition name must be less than {1} characters.
+NotNull.updateCompetitionForm.frequency=Please enter a frequency for the competition.
 
-# New Unit Test
-NotEmpty.newUnitTest.name=Unit test must have a name.
-Length.newUnitTest.name=Unit test name must be less than {1} characters.
-NotNull.newUnitTest.type=Please select a unit test type.
+NotFound.updateCompetitionForm=Competition not found.
+NotNull.updateCompetitionForm.studentPermissions=Please select a permission level for students.
+NotNull.updateCompetitionForm.tutorPermissions=Please select a permission level for tutors.
+NotNegative.updateCompetitionForm.frequency=Please enter non-negative values.
+TooFrequent.updateCompetitionForm.frequency=Competitions cannot be run more frequently than once per second.
 
 # Test Unit Test
 Length.testUnitTest.solutionName=Expected solution name must be less than {1} characters.
