Added a "not found" error for update unit test forms.

--- a/war/WEB-INF/classes/messages.properties
+++ b/war/WEB-INF/classes/messages.properties
@@ -42,6 +42,8 @@ NotUnique.updateUnitTest.testCases=Unit test names must be unique. Duplicate nam
 NotEmpty.updateUnitTest.testCases.testName=Please enter a name for the test case.
 NotValid.updateUnitTest.testCases.testName=Test case name must be a valid Java method identifier (alphanumeric with underscores; no whitespace).
 Min.updateUnitTest.testCases.timeout=Cannot have a negative test timeout.
+Min.updateUnitTest.id=Invalid unit test ID.
+NotFound.updateUnitTest=Unit test not found.
 
 # New Hand Marking
 NotEmpty.newHandMarkingModel.name=Hand marking template must have a name.
