Added validation for hand marking template update form.

--- a/war/WEB-INF/classes/messages.properties
+++ b/war/WEB-INF/classes/messages.properties
@@ -45,9 +45,23 @@ Min.updateUnitTest.testCases.timeout=Cannot have a negative test timeout.
 Min.updateUnitTest.id=Invalid unit test ID.
 NotFound.updateUnitTest=Unit test not found.
 
+# Test Unit Test
+Length.testUnitTest.solutionName=Expected solution name must be less than {1} characters.
+NotEmpty.testUnitTest.file=Please select a file to upload.
+
 # New Hand Marking
 NotEmpty.newHandMarkingModel.name=Hand marking template must have a name.
 Length.newHandMarkingModel.name=Hand marking template name must be less than {1} characters.
+
+# Update Hand Marking
+Min.updateHandMarkingForm.id=Invalid hand marking template ID.
+NotEmpty.updateHandMarkingForm.name=Hand marking template must have a name.
+Length.updateHandMarkingForm.name=Hand marking template name must be less than {1} characters.
+NotEmpty.updateHandMarkingForm.newColumnHeader.name=Column must have a name.
+Length.updateHandMarkingForm.newColumnHeader.name=Column name must be less than {1} characters.
+NotEmpty.updateHandMarkingForm.newRowHeader.name=Row must have a name.
+Length.updateHandMarkingForm.newRowHeader.name=Row name must be less than {1} characters.
+Length.updateHandMarkingForm.newData.data=Cell data must not exceed {1} characters.
 
 # New Competition
 NotEmpty.newCompetitionModel.name=Competition must have a name.
@@ -66,9 +80,6 @@ NotNull.updateCompetitionForm.tutorPermissions=Please select a permission level 
 NotNegative.updateCompetitionForm.frequency=Please enter non-negative values.
 TooFrequent.updateCompetitionForm.frequency=Competitions cannot be run more frequently than once per second.
 
-# Test Unit Test
-Length.testUnitTest.solutionName=Expected solution name must be less than {1} characters.
-NotEmpty.testUnitTest.file=Please select a file to upload.
 
 # loginForm
 NotEmpty.loginForm.unikey=You must enter a UniKey.
