Added validation for updating users form.

--- a/war/WEB-INF/classes/messages.properties
+++ b/war/WEB-INF/classes/messages.properties
@@ -80,6 +80,9 @@ NotNull.updateCompetitionForm.tutorPermissions=Please select a permission level 
 NotNegative.updateCompetitionForm.frequency=Please enter non-negative values.
 TooFrequent.updateCompetitionForm.frequency=Competitions cannot be run more frequently than once per second.
 
+# Update Users
+NoChange.updateUsersForm=No change will occur. Please enter some input.
+MissingPermission.updateUsersForm.updateContents=User [{0}] is missing a permission level.
 
 # loginForm
 NotEmpty.loginForm.unikey=You must enter a UniKey.
