Added assessment groups  * Groups are a special kind of user  * Groups are managed by tutors  * Assessments can allow students to choose their own group  * Groups can be limited ot unlimited in size  * Assessments can have a limited or unlimited number of groups

--- a/war/WEB-INF/classes/messages.properties
+++ b/war/WEB-INF/classes/messages.properties
@@ -25,6 +25,10 @@ NotFound.updateAssessmentForm=Assessment not found.
 BlackBox.NotEmpty.updateAssessmentForm.solutionName=As you are using Black Box unit tests, your assessment requires a solution name.
 BlackBox.Empty.updateAssessmentForm.solutionName=As you are not using Black Box unit tests, your assessment does not require a solution name. Please clear this field.
 BlackBox.Empty.updateAssessmentForm.languages=As you are not using Black Box unit tests, your assessment does not have a choice of languages. Please clear this field.
+Min.updateAssessmentForm.groupCount=You cannot have a negative number of groups.
+CannotDeleteUsedGroups.updateAssessmentForm.groupCount=There are already more than {0} groups with members in them. Please move users out of the groups before reducing the number of groups.
+CannotShrinkUsedGroups.updateAssessmentForm.groupSize=There are already groups with more than {0} members in them. Please move users out of the groups before reducing the size of groups.
+Min.updateAssessmentForm.groupSize=Group size must be greater or equal to 2.
 NotNegative.updateAssessmentForm.newUnitTests.weight=Cannot have a negative weight.
 NotNegative.updateAssessmentForm.newSecretUnitTests.weight=Cannot have a negative weight.
 NotNegative.updateAssessmentForm.newHandmarking.weight=Cannot have a negative weight.
