* Added group work flag to assessment components. Components marked as group work will have their marks allocated to all students in the group.  * Simplified the interface for adding assessment components to assessments.

--- a/war/WEB-INF/classes/messages.properties
+++ b/war/WEB-INF/classes/messages.properties
@@ -29,10 +29,12 @@ Min.updateAssessmentForm.groupCount=You cannot have a negative number of groups.
 CannotDeleteUsedGroups.updateAssessmentForm.groupCount=There are already more than {0} groups with members in them. Please move users out of the groups before reducing the number of groups.
 CannotShrinkUsedGroups.updateAssessmentForm.groupSize=There are already groups with more than {0} members in them. Please move users out of the groups before reducing the size of groups.
 Min.updateAssessmentForm.groupSize=Group size must be greater or equal to 2.
-NotNegative.updateAssessmentForm.newUnitTests.weight=Cannot have a negative weight.
-NotNegative.updateAssessmentForm.newSecretUnitTests.weight=Cannot have a negative weight.
-NotNegative.updateAssessmentForm.newHandmarking.weight=Cannot have a negative weight.
-NotNegative.updateAssessmentForm.newCompetitions.weight=Cannot have a negative weight.
+NotNegative.updateAssessmentForm.selectedUnitTests=Cannot have a negative weight.
+NotNegative.updateAssessmentForm.selectedHandmarking=Cannot have a negative weight.
+NotNegative.updateAssessmentForm.selectedCompetitions=Cannot have a negative weight.
+NotGroupWork.updateAssessmentForm.selectedUnitTests=Assessment does not have groups, so cannot contain group work.
+NotGroupWork.updateAssessmentForm.selectedHandmarking=Assessment does not have groups, so cannot contain group work.
+NotGroupWork.updateAssessmentForm.selectedCompetitions=Assessment does not have groups, so cannot contain group work.
 
 # New Unit Test
 NotEmpty.newUnitTest.name=Unit test must have a name.
