* Moved assessment release form to same place as the rest of the forms  * Added form validation for release form   * Validation messages are not specific to command name ("releaseRuleForm") to allow for nesting rules. This could potentially cause problems with messages being caught when a more specific message exists for another form.

--- a/war/WEB-INF/classes/messages.properties
+++ b/war/WEB-INF/classes/messages.properties
@@ -36,6 +36,26 @@ NotGroupWork.updateAssessmentForm.selectedUnitTests=Assessment does not have gro
 NotGroupWork.updateAssessmentForm.selectedHandmarking=Assessment does not have groups, so cannot contain group work.
 NotGroupWork.updateAssessmentForm.selectedCompetitions=Assessment does not have groups, so cannot contain group work.
 
+# Updating release rule
+NotNull.classes=Please select some classes.
+NotNull.streams=Please select some streams.
+NotNull.usernames=Please select some users.
+NotEmpty.strDate=Please choose a date.
+NotNull.markType=Please select a valid mark type.
+NotNull.compareMode=Please select a valid compare mode.
+NotNull.compareAssessment=Please select a valid assessment.
+NotEmpty.rules=Please choose one or more sub-rules.
+InvalidRuleType=Not a valid release rule type.
+#NotNull.releaseRuleForm.classes=Please select some classes.
+#NotNull.releaseRuleForm.streams=Please select some streams.
+#NotNull.releaseRuleForm.usernames=Please select some users.
+#NotEmpty.releaseRuleForm.strDate=Please choose a date.
+#NotNull.releaseRuleForm.markType=Please select a valid mark type.
+#NotNull.releaseRuleForm.compareMode=Please select a valid compare mode.
+#NotNull.releaseRuleForm.compareAssessment=Please select a valid assessment.
+#NotEmpty.releaseRuleForm.rules=Please choose one or more sub-rules.
+#InvalidRuleType.releaseRuleForm=Not a valid release rule type.
+
 # New Unit Test
 NotEmpty.newUnitTest.name=Unit test must have a name.
 Length.newUnitTest.name=Unit test name must be less than {1} characters.
