Default UOS name is PASTA

--- a/war/WEB-INF/classes/messages.properties
+++ b/war/WEB-INF/classes/messages.properties
@@ -1,4 +1,4 @@
-UOS=Info1103
+UOS=PASTA
 
 # General errors
 errors.message=There were some errors in the form. Please correct the errors before continuing.
