Added basic submission validation.

--- a/war/WEB-INF/classes/messages.properties
+++ b/war/WEB-INF/classes/messages.properties
@@ -46,15 +46,6 @@ NotNull.compareMode=Please select a valid compare mode.
 NotNull.compareAssessment=Please select a valid assessment.
 NotEmpty.rules=Please choose one or more sub-rules.
 InvalidRuleType=Not a valid release rule type.
-#NotNull.releaseRuleForm.classes=Please select some classes.
-#NotNull.releaseRuleForm.streams=Please select some streams.
-#NotNull.releaseRuleForm.usernames=Please select some users.
-#NotEmpty.releaseRuleForm.strDate=Please choose a date.
-#NotNull.releaseRuleForm.markType=Please select a valid mark type.
-#NotNull.releaseRuleForm.compareMode=Please select a valid compare mode.
-#NotNull.releaseRuleForm.compareAssessment=Please select a valid assessment.
-#NotEmpty.releaseRuleForm.rules=Please choose one or more sub-rules.
-#InvalidRuleType.releaseRuleForm=Not a valid release rule type.
 
 # New Unit Test
 NotEmpty.newUnitTest.name=Unit test must have a name.
@@ -110,6 +101,15 @@ TooFrequent.updateCompetitionForm.frequency=Competitions cannot be run more freq
 NoChange.updateUsersForm=No change will occur. Please enter some input.
 MissingPermission.updateUsersForm.updateContents=User [{0}] is missing a permission level.
 
+# submission errors
+NoUser=No one is submitting this assessment. That can't happen.
+NoFile.file=Please choose a file to submit.
+NoGroup=You cannot submit group work if you are not in a group.
+NotGroupWork=This assessment does not have group work, so you cannot submit for your group.
+MustBeGroup=This assessment only contains group work, so you must be in a group to submit.
+AfterClosingDate=You cannot submit after the due date.
+MaxAttempts=You have reached your maximum number of attempts.
+
 # loginForm
 NotEmpty.loginForm.unikey=You must enter a UniKey.
 NotEmpty.loginForm.password=You must enter a Password.
@@ -125,12 +125,6 @@ TooEarly.newArena.date=The date you have entered is before the current time.
 # new player
 DoesntCompile.playerCode.file= cannot be compiled.
 DoesntRun.playerCode.file= could not complete 10 games in 1 second.
-
-# submission errors
-Submission.AfterClosingDate=You cannot submit after the due date.
-Submission.NoFile=You need to submit a file.
-Submission.NotZip=You need to submit a <b>zip</b> archive.
-Submission.NoAttempts=You have run out of attempts.
 
 # player validation
 Player.noFile=You did not submit a file
