Updated unit testing:  * Removed separate Junit and Black box tests - now any unit test can have a combination of both  * Added runtime error checking (scraping and storing the results of runtime errors) to complement build error checking  * Made unit test input/output directory names all reference the same constant

--- a/war/WEB-INF/classes/messages.properties
+++ b/war/WEB-INF/classes/messages.properties
@@ -50,7 +50,6 @@ InvalidRuleType=Not a valid release rule type.
 # New Unit Test
 NotEmpty.newUnitTest.name=Unit test must have a name.
 Length.newUnitTest.name=Unit test name must be less than {1} characters.
-NotNull.newUnitTest.type=Please select a unit test type.
 
 # Update Unit Test
 NotEmpty.updateUnitTest.name=Unit test name must not be empty.
@@ -59,6 +58,7 @@ NotUnique.updateUnitTest.testCases=Unit test names must be unique. Duplicate nam
 NotEmpty.updateUnitTest.testCases.testName=Please enter a name for the test case.
 NotValid.updateUnitTest.testCases.testName=Test case name must be a valid Java method identifier (alphanumeric with underscores; no whitespace).
 Min.updateUnitTest.testCases.timeout=Cannot have a negative test timeout.
+NotComparedEmpty.updateUnitTest.testCases.output=Cannot have a test output if the test is not to be compared to user output.
 Min.updateUnitTest.id=Invalid unit test ID.
 NotFound.updateUnitTest=Unit test not found.
 
