Added custom submission Validation - An instructor may set up a validator that will be run on student submissions before they are accepted. If the validation has errors, the submission is rejected. If the validation has plain feedback, the submission is accepted and feedback shown to user.

--- a/war/WEB-INF/classes/messages.properties
+++ b/war/WEB-INF/classes/messages.properties
@@ -20,6 +20,7 @@ NotNull.updateAssessmentForm.dueDate=Please enter a due date.
 Min.updateAssessmentForm.numSubmissionsAllowed=Please enter a non-negative number.
 Length.updateAssessmentForm.description=Assessment description too long. Must be less than {1} characters.
 Length.updateAssessmentForm.solutionName=Expected solution name must be less than {1} characters.
+NotJavaValidator.updateAssessmentForm.validatorFile=Custom validator must be a single Java file.
 
 NotFound.updateAssessmentForm=Assessment not found.
 BlackBox.NotEmpty.updateAssessmentForm.solutionName=As you are using Black Box unit tests, your assessment requires a solution name.
