Added validation to release rule percentages on mark compare rules

--- a/war/WEB-INF/classes/messages.properties
+++ b/war/WEB-INF/classes/messages.properties
@@ -43,6 +43,7 @@ NotNull.streams=Please select some streams.
 NotNull.usernames=Please select some users.
 NotEmpty.strDate=Please choose a date.
 NotNull.markType=Please select a valid mark type.
+NotPercentage.compareMark=Percentage must be between 0.0 (0%) and 1.0 (100%)
 NotNull.compareMode=Please select a valid compare mode.
 NotNull.compareAssessment=Please select a valid assessment.
 NotEmpty.rules=Please choose one or more sub-rules.
