Added validation to check that if the user submits a .zip file that it is actually a .zip file.

--- a/war/WEB-INF/classes/messages.properties
+++ b/war/WEB-INF/classes/messages.properties
@@ -111,6 +111,7 @@ NotGroupWork=This assessment does not have group work, so you cannot submit for 
 MustBeGroup=This assessment only contains group work, so you must be in a group to submit.
 AfterClosingDate=You cannot submit after the due date.
 MaxAttempts=You have reached your maximum number of attempts.
+NotRealZip=Your submission is not a real ZIP file. It is not enough to change the extension to ".zip". You must create the ZIP file properly.
 
 # loginForm
 NotEmpty.loginForm.unikey=You must enter a UniKey.
