Added timeouts for unit test module: individual timeouts for black box test suite and advanced testing suite.

--- a/war/WEB-INF/classes/messages.properties
+++ b/war/WEB-INF/classes/messages.properties
@@ -61,6 +61,10 @@ Min.updateUnitTest.testCases.timeout=Cannot have a negative test timeout.
 NotComparedEmpty.updateUnitTest.testCases.output=Cannot have a test output if the test is not to be compared to user output.
 Min.updateUnitTest.id=Invalid unit test ID.
 NotFound.updateUnitTest=Unit test not found.
+Min.updateUnitTest.blackBoxTimeout=Cannot have a negative timeout.
+NotNull.updateUnitTest.blackBoxTimeout=Please enter a total test timeout in milliseconds.
+Min.updateUnitTest.advancedTimeout=Cannot have a negative timeout.
+NotNull.updateUnitTest.advancedTimeout=Please enter a total test timeout in milliseconds.
 
 # Test Unit Test
 Length.testUnitTest.solutionName=Expected solution name must be less than {1} characters.
