Added options edit page in admin.

--- a/war/WEB-INF/classes/messages.properties
+++ b/war/WEB-INF/classes/messages.properties
@@ -103,3 +103,11 @@ NotEmpty.loginForm.unikey=You must enter a UniKey.
 NotEmpty.loginForm.password=You must enter a Password.
 Failed.loginForm.password=User name and/or password was incorrect.
 NotAvailable.loginForm.password=You are not registered on the system, please contact your tutor/lecturer.
+
+# Update Options
+NeedBoth.updateOptionsForm.addKey=Enter a key for the new value
+NeedBoth.updateOptionsForm.addValue=Enter a value for the new key
+InvalidCharacters.updateOptionsForm.options.key=Key must start with a letter, and contain only letters, numbers, periods, hyphens and underscores.
+InvalidCharacters.updateOptionsForm.addKey=Key must start with a letter, and contain only letters, numbers, periods, hyphens and underscores.
+MissingValue.updateOptionsForm.addOptions=Line {0}: Key "{1}" is missing a value.
+InvalidCharacters.updateOptionsForm.addOptions=Line {0}: Key "{1}" must start with a letter, and contain only letters, numbers, periods, hyphens and underscores.
